--- a/my-app/jsconfig.json
+++ b/my-app/jsconfig.json
@@ -1,11 +1,15 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@components/*": ["src/components/*"],
-        "@views/*": ["src/views/*"],
-        "@services/*": ["src/services/*"],
-        "@styles/*": ["src/styles/*"],
-      },
-    },
-  }
+	"compilerOptions": {
+		"baseUrl": ".",
+		"jsx": "react",
+		"target": "ES6",
+		"allowSyntheticDefaultImports": true,
+		"paths": {
+			"@components/*": ["./src/components/*"],
+			"@views/*": ["./src/views/*"],
+			"@styles/*": ["./src/styles/*"],
+			"@services/*": ["./src/services/*"]
+		}
+	},
+	"exclude": ["node_modules", "build"]
+}
